--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@
 PORT=3000
 NODE_ENV=development
 
-# Database Configuration
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=your_username
-DB_PASSWORD=your_password
-DB_NAME=crm_database
+# Database Configuration (matches Zeabur automatic naming)
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=your_username
+MYSQL_PASSWORD=your_password
+MYSQL_DATABASE=simple_crm
 
 # JWT Configuration
 JWT_SECRET=your_super_secret_jwt_key_here_please_change_in_production
