fix: standardize MySQL configuration by replacing MYSQL_USER with MYSQL_USERNAME in environment files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: test_password
           MYSQL_DATABASE: simple_crm
-          MYSQL_USER: test_user
+          MYSQL_USERNAME: test_user
           MYSQL_PASSWORD: test_password
         ports:
           - 3306:3306
@@ -85,7 +85,7 @@ jobs:
       env:
         MYSQL_HOST: localhost
         MYSQL_PORT: 3306
-        MYSQL_USER: test_user
+        MYSQL_USERNAME: test_user
         MYSQL_PASSWORD: test_password
         MYSQL_DATABASE: simple_crm
         JWT_SECRET: test_jwt_secret_for_ci
