--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,11 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
-      - DB_HOST=mysql
-      - DB_PORT=3306
-      - DB_USERNAME=root
-      - DB_PASSWORD=test123
-      - DB_NAME=simple_crm
+      - MYSQL_HOST=mysql
+      - MYSQL_PORT=3306
+      - MYSQL_USERNAME=root
+      - MYSQL_PASSWORD=test123
+      - MYSQL_NAME=simple_crm
       - JWT_SECRET=docker_jwt_secret_change_in_production
       - JWT_EXPIRES_IN=24h
     depends_on:
