feat: enhance CI configuration by adding MySQL service and enabling CORS for frontend

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,6 +14,18 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' }}
 
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: test_password
+          MYSQL_DATABASE: simple_crm
+          MYSQL_USER: test_user
+          MYSQL_PASSWORD: test_password
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -34,6 +46,14 @@ jobs:
       run: |
         npm run test
         npm run test:e2e
+      env:
+        MYSQL_HOST: localhost
+        MYSQL_PORT: 3306
+        MYSQL_USERNAME: test_user
+        MYSQL_PASSWORD: test_password
+        MYSQL_DATABASE: simple_crm
+        JWT_SECRET: test_jwt_secret_for_cd
+        NODE_ENV: test
 
     - name: Health check preparation
       run: echo "Build completed successfully. Ready for Zeabur deployment."
