--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,16 +3,11 @@ name: Continuous Deployment
 on:
   push:
     branches: [ main ]
-  workflow_run:
-    workflows: ["Continuous Integration"]
-    types:
-      - completed
-    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' }}
+    needs: []
 
     services:
       mysql:
